Adding permissions for web socket to Lambda