@@ -70,6 +70,7 @@ import sleeper.configuration.properties.instance.InstanceProperties;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
@@ -230,6 +231,7 @@ public class QueryStack extends NestedStack {
                 .build();
 
         lambda.addEventSource(new SqsEventSource(leafPartitionQueriesQueue, eventSourceProps));
+        grantAccessToWebSocketQueryApi(lambda);
     }
 
     /***
@@ -532,7 +534,7 @@ public class QueryStack extends NestedStack {
     public Grant grantAccessToWebSocketQueryApi(IGrantable identity) {
         return Grant.addToPrincipal(GrantOnPrincipalOptions.builder()
                 .grantee(identity)
-                .actions(Collections.singletonList("execute-api:Invoke"))
+                .actions(List.of("execute-api:Invoke", "execute-api:ManageConnections"))
                 .resourceArns(Collections.singletonList(Stack.of(this).formatArn(ArnComponents.builder()
                         .service("execute-api")
                         .resource(this.webSocketApi.getRef())
